syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message ShippingAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
  string country = 5;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  ShippingAddress shipping_address = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
  double total_amount = 3;
  string created_at = 4;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  string id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  repeated OrderItem items = 5;
  ShippingAddress shipping_address = 6;
  string created_at = 7;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  string order_id = 2;
  string status = 3;
}

message GetUserOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetUserOrdersResponse {
  repeated GetOrderResponse orders = 1;
  int32 total = 2;
}